メッセージ表示修正_0117

--- a/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
@@ -26,7 +26,9 @@
     <div class="wrapper">
         <main class="main">
             <h1>パスワード変更完了</h1>
-            <p>パスワードを変更しました。</p>
+            <msg class="check-mark" class="{{ message.tags }}">
+                <hu>パスワードを変更しました</hu>
+            </msg><br>
             <button class="decorated-btn" class="btn btn-primary btn-block"><a href="{% url 'refrigerator' %}">HOME</a></button>
         </main>
     </div>
