--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -48,6 +48,12 @@
     <main class="main">
         <form  method="post" >
             {%  csrf_token %}
+            {% for message in messages %}
+                <msg {% if message.tags %} class="check-mark" class="{{ message.tags }}">
+                    {% endif %}
+                    {{ message }}
+                </msg>
+            {% endfor %}
             <h3><p align="left">使いたい食材を複数選択可能です。</p></h3>
             <div data-intro="使いたい食材にチェックを付けて" data-step="1" class="scroll-table">
                 <table class="osare-table col5t">  
